fix: fixed the overflow on ads part

--- a/src/css/Header/laptop/nav.css
+++ b/src/css/Header/laptop/nav.css
@@ -20,7 +20,12 @@
   border: 0.1rem solid rgb(235, 235, 235);
   border-radius: 0.5rem;
 }
-
+.search-icons {
+  position: absolute;
+  left: 24.5vw;
+  font-size: 1rem;
+  color: rgba(34, 81, 236, 0.904);
+}
 .quickOrder {
   background-color: rgba(34, 81, 236, 0.904);
   padding: 0.6rem;
@@ -39,9 +44,9 @@
 .bigGrid {
   margin-left: -3vw;
   width: 100vw;
-  display: grid;
-  grid-template-columns: 40vw 30vw;
-  gap: 30vw;
+  display: flex;
+
+  gap: 25vw;
 
   position: relative;
   background-color: rgb(241, 246, 250);
@@ -50,8 +55,8 @@
 
 .navTitles {
   margin-left: 2vw;
-  display: grid;
-  grid-template-columns: 16vw 9vw 9vw 10vw; /* 7 columns */
+  display: flex;
+  gap: 1vw;
 }
 
 .navDrop {
@@ -60,10 +65,9 @@
 }
 
 .optionsGrid {
-  display: grid;
-  grid-template-columns: 5vw 6vw 14vw;
+  display: flex;
 
-  gap: 2vw;
+  gap: 4vw;
 }
 
 .comp img {
@@ -116,7 +120,8 @@
   justify-content: center;
   justify-items: center;
   text-align: center;
-  margin-right: 4vw;
+  margin-top: 1vh;
+  margin-right: 1vw;
 }
 
 .compareValue {
@@ -146,7 +151,7 @@
 
 .cartValue {
   position: relative;
-  top: -7vh;
+  top: -8vh;
   margin-left: 3vw;
   color: white;
   padding: 0.1rem 0.2rem;
@@ -159,34 +164,29 @@
 
 /* from here the css for right corner of top nav starts i.e. user values  */
 .userTitles {
-  display: grid;
-  grid-template-columns: 11vw 0.5px 10vw 0.5px 20vw;
-  gap: 0.5vw;
-  font-size: 1.2rem;
+  display: flex;
+  gap: 4vw;
 }
 
 .bigGridd {
   margin-left: -3vw;
-  display: grid;
-  grid-template-columns: 50vw 40vw;
+  display: flex;
   background-color: rgb(241, 246, 250);
   width: 100vw;
-  gap: 9vw;
+  gap: 25vw;
   padding: 0.6rem;
   position: relative;
 }
 .navTitless {
   margin-left: 5vw;
-  display: grid;
-  grid-template-columns: 11vw 13vw 10vw; /* 7 columns */
+  display: flex;
+  gap: 3vw;
 }
 
 .number {
   color: rgba(34, 81, 236, 0.904);
   margin-top: 0.5vh;
   font-size: 1rem;
-  display: flex;
-  align-self: center;
 }
 .messages {
   margin-right: 0.5vw;
