--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ html {
   align-items: center;
   justify-content: center;
   max-width: 100vw;
-  border: 1px solid red;
 }
 
 body {
